2008-07-14  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclProc.c (TclNRApplyObjCmd, TclObjInterpProcCore): 
	* generic/tclBasic.c (TclNR_AddCallback, TclEvalObjv_NR2): 
	* generic/tclNRE.h (TEOV_callback): Change the callback storage type
	to use an array, so guaranteeing correct inter-member spacing and
	memory layout.

2008-07-14  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  Remove unneeded TclInterpReady calls
	* generic/tclParse.c:
	
	* generic/tclBasic.c.:   Embedded Tcl_Canceled() calls into
	* generic/tclExecute.c:  TclInterpReady().
	* generic/tclParse.c:     
	
	* generic/tclVar.c: fix error message
	
	* generic/tclParse.c: remove unnecessary numLevel management 
	* tests/parse.test:   [Bug 2017583]
	
	* generic/tclBasic.c.:   NRE left too many calls to 
	* generic/tclExecute.c:  TclResetCancellation lying around: it
	* generic/tclProc.c:     only needs to be called prior to any
	                         iPtr->numLevels++. Thanks mistachkin.
	
	* generic/tclBasic.c: TclResetCancellation() calls were misplaced
	(merge mishap); stray //. Thanks patthoyts.
	
	* generic/tclInt.h: the new macros TclSmallAlloc and TclSmallFree
	were badly defined under mem debugging [Bug 2017240] (thx das)
	
2008-07-13  Miguel Sofer  <msofer@users.sf.net>

	NRE implementation [Patch 2017110]
	
	* generic/tcl.decls:     The NRE infrastructure     
	* generic/tcl.h:                   
	* generic/tclBasic.c:
	* generic/tclCmdAH.c:              
	* generic/tclCompile.h:
	* generic/tclDecls.h:
	* generic/tclExecute.c:
	* generic/tclHistory.c:
	* generic/tclInt.decls:
	* generic/tclInt.h:
	* generic/tclIntDecls.h:
	* generic/tclNRE.h:
	* generic/tclStubInit.c:
	* unix/Makefile.in:
	
	* generic/tclInterp.c:   NRE-enabling: procs, lambdas, uplevel, 
	* generic/tclNamesp.c:   same-interp aliases, ensembles, imports
	* generic/tclProc.c:     and namespace_eval.

	* generic/tclTestProcBodyObj.c: New NRE specific tests (few, but