@@ -1025,7 +1025,7 @@ test parse-19.2 {Bug 1115904: recursion limit in Tcl_EvalEx} -constraints {
     interp create i
     load {} Tcltest i
     i eval {proc {} args {}}
-    interp recursionlimit i 1
+    interp recursionlimit i 2
 } -body {
     i eval {testevalex {[[]]}}
 } -cleanup {
@@ -1045,7 +1045,7 @@ test parse-19.3 {Bug 1115904: recursion limit in Tcl_EvalEx} -setup {
 test parse-19.4 {Bug 1115904: recursion limit in Tcl_EvalEx} -setup {
     interp create i
     i eval {proc {} args {}}
-    interp recursionlimit i 1
+    interp recursionlimit i 2
 } -body {
     i eval {subst {[[]]}}
 } -cleanup {
